--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -5,3 +5,6 @@
   --box-shadow-black: 2px 2px var(--color-black);
   --border-radius-1: 5px; 
 }
+
+.min-vh-100{min-height: 100vh;}
+.min-vw-100{min-width: 100vw;}
