--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,3 +12,21 @@
 .fs-xs2{
   font-size: .875rem;
 }
+
+@keyframes float {
+  0%{
+    transform: translateY(0px);
+  }
+  30% {
+    transform: translateY(-10px);
+  }
+  50% {
+      transform: translateY(4px);
+  }
+  70% {
+      transform: translateY(-15px);
+  }
+  100% {
+      transform: translate(0);
+  }
+}
